# dspy-baml-experiments

./: .gitignore  README.md  debug.py  evaluate.py  pyproject.toml
data/: structured_output.json
src/baml/: evaluate.py  extract.py
src/baml/baml_src/: clients.baml  extract.baml
src/dspy/: README.md  baml_adapter.py  evaluate.py  extract.py
